--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.html
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-page.component.html
@@ -7,5 +7,7 @@
     </figcaption>
   </figure>
 
-  <app-contact-form></app-contact-form>
+    <div class="container">
+      <app-contact-form></app-contact-form>
+    </div>
 </main>
