--- a/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.html
+++ b/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <form method="post">
 
   <div class="form-group">
@@ -63,4 +64,5 @@
 </form>
 
 <input type="submit" class="submit"/>
+</div>
 
