--- a/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.html
+++ b/FrontMarcheEtDevenir/src/app/contact-page/contact-form/contact-form.component.html
@@ -1,20 +1,24 @@
-<form>
-  <div class="form-group">
-    <label for="email">Votre email :</label>
-    <input type="text" class="form-control" id="email" required
-           name="email" />
+<div class="container">
+
+  <form>
+    <div class="form-group">
+      <label for="email">Votre email :</label>
+      <input type="text" class="form-control" id="email" required
+             name="email" />
+    </div>
+
+    <div class="form-group">
+      <label for="sujet">Sujet de votre message : </label>
+      <input type="text" class="form-control" id="sujet" required
+             name="sujet" />
+    </div>
+
+    <div class="form-group">
+      <label for="message">Votre message :</label>
+      <textarea type="text" class="form-control" id="message" required
+                name="message"> </textarea>
+    </div>
+  </form>
+  <input type="submit" class="submit" />
   </div>
 
-  <div class="form-group">
-    <label for="sujet">Sujet de votre message : </label>
-    <input type="text" class="form-control" id="sujet" required
-           name="sujet" />
-  </div>
-
-  <div class="form-group">
-    <label for="message">Votre message :</label>
-    <input type="text" class="form-control" id="message" required
-           name="message" />
-  </div>
-</form>
-<input type="submit" class="submit"/>
