--- a/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.css
+++ b/FrontMarcheEtDevenir/src/app/creation-offre-page/creation-offre-form/creation-offre-form.component.css
@@ -1,27 +1,29 @@
-form {
-  padding-left: 5vw;
+.container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  width: 70vw;
 }
 
-div {
-  display: flex;
-  flex-direction: column;
-  margin-top: 1vh;
-  margin-bottom: 1vh;
-  justify-content: center;
+form {
+  grid-column: 1 / 5;
 }
+
+  form div {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    justify-content: center;
+  }
 
 input {
   height: 30px;
   font-size: 1.2rem;
 }
 
-form div:last-child input {
-  height: 140px
-}
-
 .submit {
-    align-self: flex-end;
-    margin-top: 1vh;
+  grid-column: 4;
+  margin-top: 1vh;
 }
 
 label {
