feat: ajout de html dans la page d'accueil

--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
@@ -35,29 +35,34 @@
 
 <h1 class="evenements-title"><strong>Nos événements</strong></h1>
 
-<nav class="evenements-container">
-    <div class="evenement-image-title">Image du lieu</div>
-        <img class="image-evenement">
+<div class="evenements-wrapper">
+    <nav class="evenements-container">
+        <div class="evenement-image-title">Image du lieu</div>
+        <img class="image-evenement" src="path/to/image1.jpg" alt="(insérer image du lieu)">
         <div class="details-evenement">
             <p>Titre</p>
             <p>Description</p>
             <p>Date</p>
             <p>Tarif</p>
         </div>
-</nav>
-<hr>
-<nav class="evenements-container">
-    <div class="evenement-image-title">Image du lieu</div> 
-        <img class="image-evenement">
-        <div class="details-evenement">
-            <p>Titre</p>
-            <p>Description</p>
-            <p>Date</p>
-            <p>Tarif</p>
-        </div>
-</nav>
+    </nav>
 
-<hr>
+    <nav class="evenements-container">
+        <div class="evenement-image-title">Image du lieu</div>
+        <img class="image-evenement" src="path/to/image2.jpg" alt="(insérer image du lieu)">
+        <div class="details-evenement">
+            <p>Titre</p>
+            <p>Description</p>
+            <p>Date</p>
+            <p>Tarif</p>
+        </div>
+    </nav>
+</div>
+
+<div class="divBtnDevis">
+    <button class="btnDevis">Demandez un devis</button>
+</div>
+    
 <!-- Venez seuls et repartez en groupe -->
 
  <!-- Carousel Avis -->
