--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
@@ -60,10 +60,21 @@
 </div>
 
 <div class="divBtnDevis">
-    <button class="btnDevis">Demandez un devis</button>
+    <button class="btnDevis">Demandez votre devis</button>
 </div>
+
+<hr>
     
 <!-- Venez seuls et repartez en groupe -->
+
+<h1 class="venez-seuls-title"><strong>Venez seuls et repartez en groupe !</strong></h1>
+<h4 class="venez-seuls-subtitle"><i>La cohésion en image...</i></h4>
+<div class="page-container">
+    <div class="cohesion-container">
+    </div>
+</div>
+
+
 
  <!-- Carousel Avis -->
 
