--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -2,30 +2,30 @@
   <h3> Créer un compte</h3>
   <form>
     <label for="inscriptionNom">Veuillez entrer votre Nom</label>
-    <input type="text" name="inscriptionNom" id="inscriptionNom" minlength="2" required/>
+    <input type="text" name="inscriptionNom" id="inscriptionNom" minlength="2" required />
 
     <label for="inscriptionPrenom">Veuillez entrer votre Prenom</label>
-    <input type="text" name="inscriptionPrenom" id="inscriptionPrenom" minlength="2" required/>
+    <input type="text" name="inscriptionPrenom" id="inscriptionPrenom" minlength="2" required />
 
     <label for="inscriptionMail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="inscriptionMail" id="inscriptionMail" required/>
+    <input type="email" name="inscriptionMail" id="inscriptionMail" required />
 
     <label for="inscriptionMotdePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="inscriptionMotdePasse" id="inscriptionMotdePasse" pattern="[a-z],[A-Z],[1-9]" minlength="8"  required/>
+    <input type="password" name="inscriptionMotdePasse" id="inscriptionMotdePasse"  minlength="8"  required />
 
-    <section class="messageCache">
+    <!--<section class="messageCache">
       <h4>le mot de passe doit contenir : </h4>
       <p class="invalid"> au moins une <b>minuscule</b> </p>
       <p class="invalid"> au moins une <b>majuscule</b> </p>
       <p class="invalid"> au moins un <b>chiffre</b> </p>
       <p class="invalid"> au moins un <b>caractère spécial</b> </p>
       <p class="invalid"> au moins  <b>8 charactères</b> </p>
-    </section>
+    </section>-->
 
 
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
-    <input type="password" name="inscriptionConfirmationMotdePasse" id="inscriptionConfirmationMotdePasse" required/>
+    <input type="password" name="inscriptionConfirmationMotdePasse" id="inscriptionConfirmationMotdePasse" required />
 
-    <input type="submit" value="Créer son compte" formmethod="post"/>
+    <input type="submit" value="Creer un compte" (click)="CreerCompte()"/>
   </form>
 </section>
