--- a/FrontMarcheEtDevenir/src/app/header/header.component.css
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.css
@@ -4,6 +4,19 @@
     gap: 15px;
 }
 
+.header-container {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 99.99%;
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    z-index: 1000;
+}
+
 .devis, .login, .burger-menu {
     display: flex;
     align-items: center;
@@ -13,8 +26,9 @@
     width: 75px;
     height: 75px;
     border-radius: 50%;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     cursor: pointer;
+    font-size: 16px
 }
 
 .button {
