--- a/FrontMarcheEtDevenir/src/app/header/header.component.html
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="header-container">
-    <img class="logo" src="/FRONTMarcheEtDeviens/public/assets/maquette/marche&deviens_logo.png" alt="Logo">
+    <img class="logo" src="/docs/maquette/MARCHEDEVIENS_BLANC.png" alt="Logo">
     <div class="btn-container">
         <button class="devis">Devis sur mesure</button>
         <button class="login">Login</button>
