feat: ajout partie html - corps de la page d'accueil

--- a/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-accueil/corps/corps.component.html
@@ -7,8 +7,8 @@
 
 <nav class="hero-page_container">
     <div class="hero-page_content">
-        <h1 class="hero-page_title">Marche<br>& Deviens</h1>
-        <h4 class="hero-page_subtitle"><i>ou le retour à l'essentiel</i></h4>
+        <h1 class="hero-page_title">Marche & Deviens</h1>
+        <h2 class="hero-page_subtitle"><i>ou le retour à l'essentiel...</i></h2>
         <div class="btn-container">
             <p class="boutons">Professionnels</p> 
             <p class="boutons">Particuliers</p>
@@ -16,7 +16,6 @@
     </div>
 </nav>
 
-<hr>
 
 <!-- Présentation vidéo -->
 <h1 class="presentation-title"><strong>Présentation</strong></h1>
@@ -29,7 +28,7 @@
         <button class="btnEnSavoirPlus">En savoir plus</button>
     </div>
 </nav>
-<hr>
+
 
 <!-- Nos événements -->
 
@@ -63,21 +62,31 @@
     <button class="btnDevis">Demandez votre devis</button>
 </div>
 
-<hr>
     
 <!-- Venez seuls et repartez en groupe -->
 
 <h1 class="venez-seuls-title"><strong>Venez seuls et repartez en groupe !</strong></h1>
-<h4 class="venez-seuls-subtitle"><i>La cohésion en image...</i></h4>
+<h2 class="venez-seuls-subtitle"><i>La cohésion en image...</i></h2>
 <div class="page-container">
     <div class="cohesion-container">
     </div>
 </div>
 
-
-
  <!-- Carousel Avis -->
+
+<h1 class="carousel-title">Nos avis</h1>
+ <div class="page-container">
+    <div class="carousel-container">
+    </div>
+</div>
 
  <!-- Ils nous ont fait confiance -->
 
- <!-- footer -->
+<h1 class="confiance-title">Ils nous ont fait confiance</h1>
+<div class="confiance-wrapper">
+    <div class="confiance-container"></div>
+    <div class="confiance-container"></div>
+    <div class="confiance-container"></div>
+</div>
+
+ <!-- footer, plus tard -->
