--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -1,17 +1,29 @@
 <section>
   <h3> Créer un compte</h3>
-  <form>
-    <label for="inscriptionNom">Veuillez entrer votre Nom</label>
-    <input type="text" name="inscriptionNom" id="inscriptionNom" minlength="2" required />
+  <form #form="ngForm" (submit)="onSubmit(form)">
+    <label for="nom">Veuillez entrer votre Nom</label>
+    <input type="text" name="nom" id="inscriptionNom"
+    #nom="ngModel"
+    [(ngModel)]="service.FormData.nom"
+    required />
 
-    <label for="inscriptionPrenom">Veuillez entrer votre Prenom</label>
-    <input type="text" name="inscriptionPrenom" id="inscriptionPrenom" minlength="2" required />
+    <label for="prenom">Veuillez entrer votre Prenom</label>
+    <input type="text" name="prenom" id="inscriptionPrenom"     
+    #prenom="ngModel"
+    [(ngModel)]="service.FormData.prenom" 
+    required />
 
-    <label for="inscriptionMail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="inscriptionMail" id="inscriptionMail" required />
+    <label for="mail">Veuillez entrer votre Adresse Mail</label>
+    <input type="email" name="mail" id="inscriptionMail" 
+    #mail="ngModel"
+    [(ngModel)]="service.FormData.mail"
+    required />
 
-    <label for="inscriptionMotdePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="inscriptionMotdePasse" id="inscriptionMotdePasse"  minlength="8"  required />
+    <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
+    <input type="password" name="motDePasse" id="inscriptionMotdePasse" 
+    #motDePasse="ngModel"
+    [(ngModel)]="service.FormData.motDePasse"
+    minlength="8"  required />
 
     <!--<section class="messageCache">
       <h4>le mot de passe doit contenir : </h4>
@@ -26,6 +38,6 @@
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
     <input type="password" name="inscriptionConfirmationMotdePasse" id="inscriptionConfirmationMotdePasse" required />
 
-    <input type="submit" value="Creer un compte" (click)="CreerCompte()"/>
+    <input type="submit" value="Creer un compte" />
   </form>
 </section>
