--- a/FrontMarcheEtDevenir/src/app/header/header.component.css
+++ b/FrontMarcheEtDevenir/src/app/header/header.component.css
@@ -21,14 +21,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0b8221;
+    background-color: #339056;
     color: white;
     width: 75px;
     height: 75px;
     border-radius: 50%;
     margin-bottom: 5px;
     cursor: pointer;
-    font-size: 16px
+    font-size: 16px;
 }
 
 .button {
