--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -4,25 +4,31 @@
     <label for="nom">Veuillez entrer votre Nom</label>
     <input type="text" name="nom" id="inscriptionNom"
     #nom="ngModel"
-    [(ngModel)]="service.FormData.nom"
+    [(ngModel)]="service.FormData.Nom"
     required />
 
     <label for="prenom">Veuillez entrer votre Prenom</label>
     <input type="text" name="prenom" id="inscriptionPrenom"     
     #prenom="ngModel"
-    [(ngModel)]="service.FormData.prenom" 
+    [(ngModel)]="service.FormData.Prenom" 
     required />
 
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
     <input type="email" name="mail" id="inscriptionMail" 
     #mail="ngModel"
-    [(ngModel)]="service.FormData.mail"
+    [(ngModel)]="service.FormData.Mail"
+    required />
+
+    <label for="telephone">Veuillez entrer votre numéro de telephone</label>
+    <input type="email" name="telephone" id="inscriptionMail" 
+    #telephone="ngModel"
+    [(ngModel)]="service.FormData.Telephone"
     required />
 
     <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
     <input type="password" name="motDePasse" id="inscriptionMotdePasse" 
     #motDePasse="ngModel"
-    [(ngModel)]="service.FormData.motDePasse"
+    [(ngModel)]="service.FormData.MotDePasse"
     minlength="8"  required />
 
     <!--<section class="messageCache">
