--- a/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
+++ b/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
@@ -6,7 +6,7 @@
     <div class="form-group">
       <label for="nom">Nom</label>
       <input type="text" class="form-control" id="nom" required
-             name="nom" />
+             name="nom" placeholder="{{Randonneur.Nom}}" />
     </div>
 
     <div class="form-group">
