style: modification du style de la page info personnel

--- a/FrontMarcheEtDevenir/src/app/profile-page/changer-mdp/changer-mdp.component.html
+++ b/FrontMarcheEtDevenir/src/app/profile-page/changer-mdp/changer-mdp.component.html
@@ -1,26 +1,18 @@
-<div class="container">
+<section class="container">
 
   <h2>Changer le mot de passe</h2>
 
   <form>
-    <div class="form-group">
-      <label for="mdp-actuel">Mot de passe actuel :</label>
-      <input type="text" class="form-control" id="mdp-actuel" required
-             name="mdp-actuel" />
-    </div>
+    <label for="mdp-actuel">Mot de passe actuel :</label>
+    <input type="password" class="form-control" id="mdp-actuel" required name="mdp-actuel" />
 
-    <div class="form-group">
-      <label for="mdp-new">Nouveau mot de passe : </label>
-      <input type="text" class="form-control" id="mdp-new" required
-             name="mdp-new" />
-    </div>
+    <label for="mdp-new">Nouveau mot de passe : </label>
+    <input type="password" class="form-control" id="mdp-new" required name="mdp-new" />
 
-    <div class="form-group">
-      <label for="mdp-confirm">Confirmer le mot de passe :</label>
-      <textarea type="text" class="form-control" id="mdp-confirm" required
-                name="mdp-confirm"> </textarea>
-    </div>
+    <label for="mdp-confirm">Confirmer le mot de passe :</label>
+    <input type="password" class="form-control" id="mdp-confirm" required name="mdp-confirm">
+
+    <input type="submit" class="submit" />
   </form>
-  <input type="submit" class="submit" />
-</div>
 
+</section>
