--- a/FrontMarcheEtDevenir/src/app/profile-page/profil-page.component.css
+++ b/FrontMarcheEtDevenir/src/app/profile-page/profil-page.component.css
@@ -1,12 +1,12 @@
-main {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  padding: 2vw;
+section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row: auto;
 }
 
 h1 {
+  display: flex;
   font-size: 2.5rem;
   font-weight: bolder;
-  align-self: center;
+  justify-content: center;
 }
