fix: suppression des div

--- a/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
+++ b/FrontMarcheEtDevenir/src/app/profile-page/information-personalles-display/information-personalles-display.component.html
@@ -2,12 +2,11 @@
 
        <h2>Information Personelles</h2>
 
-  <form>
-    <div class="form-group">
-      <label for="nom">Nom</label>
-      <input type="text" class="form-control" id="nom" required
-             name="nom" placeholder="{{Randonneur.Nom}}" />
-    </div>
+       <form>
+
+              <label for="nom">Nom</label>
+              <input type="text" class="form-control" id="nom" required name="nom" placeholder="{{Randonneur.Nom}}" />
+
 
               <label for="prenom">Prenom</label>
               <input type="text" class="form-control" id="prenom" required name="prenom" />
@@ -18,7 +17,7 @@
               <label for="numero-tel">Téléphone</label>
               <input type="tel" class="form-control" id="numero-tel" required name="numero-tel">
 
-                <input type="submit" class="submit" />
-  </form>
-  
+              <input type="submit" class="submit" />
+       </form>
+
 </section>
