--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-connexion/formulaire-connexion.component.html
@@ -1,11 +1,17 @@
 <section>
   <h3> Se connecter</h3>
-  <form>
+  <form #form="ngForm" (submit)="onSubmit(form)">
     <label for="inscriptionMail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="inscriptionMail" id="inscriptionMail" required/>
+    <input type="email" name="inscriptionMail" id="inscriptionMail" 
+    #mail="ngModel"
+    [(ngModel)]="service.FormData.Mail"
+    required/>
 
     <label for="inscriptionMotdePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="inscriptionMotdePasse" id="inscriptionMotdePasse" pattern="[a-z],[A-Z],[1-9]" minlength="8" required/>
+    <input type="password" name="inscriptionMotdePasse" id="inscriptionMotdePasse" 
+    #MotDePasse="ngModel"
+    [(ngModel)]="service.FormData.MotDePasse"
+     required/>
 
     <a href="">Mot de passe oublié?</a>
 
